Add location header to register
